--- a/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-basic-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-basic-01.html
@@ -1,5 +1,10 @@
 ---
-title: Basic
+title: Color Picker • Basic • Default Input
+description: Verifies baseline color picker rendering with default value handling.
+specs:
+  - Color picker renders native color input surface.
+  - Default value state is visible without explicit value prop.
+  - Baseline control geometry remains stable in layout.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-color-picker></rtgl-color-picker>
