--- a/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-dimensions-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-dimensions-01.html
@@ -1,5 +1,10 @@
 ---
-title: Custom Dimensions
+title: Color Picker • Dimensions • Fixed Size
+description: Verifies explicit width and height control using shared dimension attributes.
+specs:
+  - Combined dimension attributes apply fixed square sizing.
+  - Seeded color value remains visible after sizing changes.
+  - Custom dimensions do not break input rendering.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-color-picker wh="48" value="#3498db"></rtgl-color-picker>
