--- a/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-disabled-01.html
@@ -1,5 +1,10 @@
 ---
-title: Disabled
+title: Color Picker • Disabled • Interactive State
+description: Verifies disabled color picker appearance and non-interactive affordance.
+specs:
+  - Disabled control presents reduced interactive emphasis.
+  - Disabled cursor state is visually distinct.
+  - Disabled state preserves control geometry.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-color-picker disabled></rtgl-color-picker>
