--- a/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-shared-attrs-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/colorPicker/colorPicker-shared-attrs-01.html
@@ -1,5 +1,6 @@
 ---
-title: Shared Attr Contract
+title: Color Picker • Shared Attributes • Contract Checks
+description: Verifies shared dimension, visibility, opacity, z-index, and responsive attribute behavior.
 specs:
   - wh should override w and h
   - w="f" should map to stretch width
