--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-lg.html
@@ -1,6 +1,10 @@
 ---
-title: "Size Large"
-skipScreenshot: true
+title: Dialog • Size • Large Preset
+description: Verifies `s=lg` dialog preset width rendering.
+specs:
+  - Large size preset expands dialog width relative to smaller presets.
+  - Content block remains aligned and readable at larger width.
+  - Close event handling stays consistent with sized dialog.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-button id="button">Open Dialog s=lg</rtgl-button>
