--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-md.html
@@ -1,6 +1,10 @@
 ---
-title: "Size Medium"
-skipScreenshot: true
+title: Dialog • Size • Medium Preset
+description: Verifies `s=md` dialog preset width rendering.
+specs:
+  - Medium size preset applies expected dialog width.
+  - Content layout remains balanced at medium breakpoint.
+  - Close event handling stays consistent with sized dialog.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-button id="button">Open Dialog s=md</rtgl-button>
