--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-anchor-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-anchor-01.html
@@ -1,5 +1,10 @@
 ---
-title: "Anchor"
+title: Image • Anchor • Link Targets
+description: Verifies image anchor mode with mixed target behavior and consistent thumbnail framing.
+specs:
+  - Images with href render as clickable anchors.
+  - Target blank links keep the same visual presentation as same-tab links.
+  - Rounded corners and fixed dimensions remain stable in anchor mode.
 ---
 
 <rtgl-view d="h" g="lg" p="lg" wh="f" fw="wrap">
