--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-object-fit-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-object-fit-01.html
@@ -1,5 +1,10 @@
 ---
-title: Object Fit
+title: Image • Object Fit • Mode Comparison
+description: Verifies object-fit mode rendering across square, portrait, and landscape frames.
+specs:
+  - Default fit, cover, contain, and none modes render distinct crop/scale behavior.
+  - Fit behavior stays consistent across different aspect-ratio containers.
+  - Background color framing reveals object-fit differences reliably.
 ---
 <rtgl-view g="lg" p="lg" wh="f">
     <rtgl-view d="h" g="lg">
