--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-basic-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-basic-01.html
@@ -1,5 +1,10 @@
 ---
-title: Basic
+title: Input • Basic • Default Text Field
+description: Verifies baseline rendering for the default text input variant.
+specs:
+  - Input renders with default type text.
+  - Baseline border, padding, and height styling are visible.
+  - Empty state remains stable inside wrapped layout.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-input></rtgl-input>
