--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-placeholder-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-placeholder-01.html
@@ -1,5 +1,10 @@
 ---
-title: Placeholder
+title: Input • Placeholder • Text Hint
+description: Verifies placeholder text rendering for empty input values.
+specs:
+  - Placeholder text is visible when value is empty.
+  - Placeholder styling remains legible in default theme tokens.
+  - Input geometry remains unchanged by placeholder content.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-input placeholder="Please input something..." ></rtgl-input>
