--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-types-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-types-01.html
@@ -1,5 +1,10 @@
 ---
-title: Types
+title: Input • Type • Text and Password
+description: Verifies type switching between text and password input modes.
+specs:
+  - Missing type defaults to text behavior.
+  - Password type masks input characters visually.
+  - Mixed type controls render consistently in one layout.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-text>text (default)</rtgl-text>
