--- a/packages/rettangoli-ui/vt/specs/primitives/slider/slider-basic-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/slider/slider-basic-01.html
@@ -1,5 +1,10 @@
 ---
-title: Basic
+title: Slider • Basic • Default Range
+description: Verifies baseline slider rendering with default min, max, and step.
+specs:
+  - Slider renders default track and thumb styles.
+  - Default range geometry is stable in standard layout.
+  - Baseline state appears without custom attributes.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-slider></rtgl-slider>
