--- a/packages/rettangoli-ui/vt/specs/primitives/slider/slider-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/slider/slider-disabled-01.html
@@ -1,5 +1,10 @@
 ---
-title: Disabled
+title: Slider • Disabled • Interactive State
+description: Verifies disabled slider appearance and non-interactive affordance.
+specs:
+  - Disabled slider displays reduced emphasis.
+  - Thumb cursor and control affordance indicate non-interaction.
+  - Disabled state keeps assigned value positioning.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-slider disabled value="50"></rtgl-slider>
