--- a/packages/rettangoli-ui/vt/specs/primitives/slider/slider-range-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/slider/slider-range-01.html
@@ -1,5 +1,10 @@
 ---
-title: Custom Range
+title: Slider • Range • Min Max Step
+description: Verifies custom range bounds and step increments with a seeded value.
+specs:
+  - Custom min and max bounds render correctly.
+  - Decimal step values are accepted.
+  - Initial value aligns with configured range constraints.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-slider min="0" max="10" step="0.5" value="5.5"></rtgl-slider>
