--- a/packages/rettangoli-ui/vt/specs/primitives/svg/svg-color-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/svg/svg-color-01.html
@@ -1,5 +1,10 @@
 ---
-title: "SVG - Color"
+title: SVG • Color • Token Variants
+description: Verifies svg icon color token mapping across semantic foreground variants.
+specs:
+  - Default icon color uses foreground token.
+  - Semantic color tokens map correctly to icon color.
+  - Color changes do not affect icon geometry.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-svg svg="text" wh="24"></rtgl-svg>
