--- a/packages/rettangoli-ui/vt/specs/primitives/svg/svg-dimensions-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/svg/svg-dimensions-01.html
@@ -1,5 +1,10 @@
 ---
-title: SVG - Dimensions
+title: SVG • Dimensions • Width Height and Combined
+description: Verifies icon sizing through combined and separate dimension attributes.
+specs:
+  - Combined dimension attribute applies equal width and height.
+  - Separate width and height attributes support rectangular sizing.
+  - Sizing changes preserve icon rendering fidelity.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-svg svg="text" wh="24"></rtgl-svg>
