--- a/packages/rettangoli-ui/vt/specs/primitives/svg/svg-svg-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/svg/svg-svg-01.html
@@ -1,5 +1,10 @@
 ---
-title: "SVG"
+title: SVG • Icon Set • Registry Rendering
+description: Verifies multiple registered icon names render successfully.
+specs:
+  - Known icon keys resolve to rendered svg output.
+  - Multiple icons can render together in one container.
+  - Uniform sizing remains consistent across icon variants.
 ---
 <rtgl-view bgc="suc" g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-svg svg="text" wh="24"></rtgl-svg>
