--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-anchor-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-anchor-01.html
@@ -1,5 +1,10 @@
 ---
-title: Anchor
+title: Text • Anchor • Slotted Links
+description: Verifies anchor styling when links are slotted inside text content.
+specs:
+  - Inline slotted anchor inherits text typography context.
+  - Nested link-only text nodes render anchor style correctly.
+  - Mixed plain text and anchor fragments remain visually coherent.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-view p="md">
