--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-anchor-02.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-anchor-02.html
@@ -1,5 +1,10 @@
 ---
-title: "Text with href and target"
+title: Text • Anchor • Host Href Target
+description: Verifies host-level href and target overlay behavior on text elements.
+specs:
+  - Host href turns text into clickable overlay links.
+  - Target blank links render correctly for external navigation.
+  - Ellipsis and style variants remain compatible with host links.
 ---
 
 <rtgl-view d="v" g="lg" p="lg" wh="f" fw="wrap">
