--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-color-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-color-01.html
@@ -1,5 +1,10 @@
 ---
-title: Color
+title: Text • Color • Base Background
+description: Verifies text color token rendering on default page background.
+specs:
+  - Foreground and semantic foreground tokens remain legible.
+  - Muted foreground token shows reduced emphasis.
+  - Accent foreground token remains distinguishable from defaults.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-text>abcdefghijklmnopqrstuvwxyz</rtgl-text>
