--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-color-03.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-color-03.html
@@ -1,5 +1,10 @@
 ---
-title: Color 3
+title: Text • Color • Accent Background
+description: Verifies text color token contrast against accent container backgrounds.
+specs:
+  - Default and foreground text remain visible on accent surfaces.
+  - Muted foreground token remains perceptibly softer.
+  - Accent foreground token is still distinct within accent context.
 ---
 <rtgl-view bgc="ac" g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-text>abcdefghijklmnopqrstuvwxyz</rtgl-text>
