--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-size-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-size-01.html
@@ -1,5 +1,10 @@
 ---
-title: Size
+title: Text • Size • Token Scale
+description: Verifies full text size scale from body tokens through heading tokens.
+specs:
+  - Body sizes from xs through lg render expected hierarchy.
+  - Heading sizes h4 through h1 render larger typographic emphasis.
+  - Size transitions remain visually ordered and consistent.
 ---
 
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
