--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-size-02.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-size-02.html
@@ -1,5 +1,10 @@
 ---
-title: Size 2
+title: Text • Size • Long Content Flow
+description: Verifies long-content readability and wrapping behavior across text size tokens.
+specs:
+  - Long sentences render without clipping at each size.
+  - Wrapping remains stable across body and heading sizes.
+  - Visual hierarchy remains clear even for multi-line content.
 ---
 
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
