--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-text-align-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-text-align-01.html
@@ -1,5 +1,10 @@
 ---
-title: Text Align
+title: Text • Alignment • Start Center End Justify
+description: Verifies text alignment options for paragraph content inside fixed-width containers.
+specs:
+  - Start alignment renders baseline left alignment.
+  - Center, end, and justify alignments render distinct paragraph layout.
+  - Alignment changes do not break container spacing.
 ---
 
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
