--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-text-style-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-text-style-01.html
@@ -1,5 +1,10 @@
 ---
-title: Style
+title: Text • Inline Styles • Rich Markup
+description: Verifies inline semantic markup rendering inside text content.
+specs:
+  - Bold, italic, and underline markup render correctly.
+  - Code, deletion, insertion, and mark tags keep readable style distinctions.
+  - Subscript and superscript inline positioning remains legible.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-view bgc="mu" p="md">
