--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/adaptive-scroll.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/adaptive-scroll.html
@@ -1,10 +1,21 @@
 ---
-title: "Adaptive Scroll Test"
+title: Dialog • Adaptive • Scroll Stress
+description: Verifies adaptive layout and scrolling with very long dialog content.
+specs:
+  - Trigger opens dialog containing multiple long sections.
+  - Content overflow remains accessible in scrollable layout.
+  - Close handling synchronizes dialog open state.
+steps:
+  - select open-dialog-very-long:
+    - click
+  - 'waitFor #dialog-very-long[open] visible 1500'
+  - 'assert text #dialog-very-long Very Long Content - Scrolling Test'
+  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-view g="md">
     <rtgl-text s="lg">Dialog Adaptive Centering Tests</rtgl-text>
-    <rtgl-button id="button-very-long">Open Very Long Content (Should scroll)</rtgl-button>
+    <rtgl-button id="button-very-long" data-testid="open-dialog-very-long">Open Very Long Content (Should scroll)</rtgl-button>
   </rtgl-view>
   
   <!-- Very long content dialog to test scrolling -->
