--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/basic.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/basic.html
@@ -1,8 +1,19 @@
 ---
-title: "Basic"
+title: Dialog • Basic • Open and Close
+description: Verifies baseline dialog open/close behavior with overlay close event handling.
+specs:
+  - Trigger button opens dialog with content slot rendered.
+  - Close action inside dialog dismisses the overlay.
+  - Close event listener keeps `open` state synchronized.
+steps:
+  - select open-dialog-basic:
+    - click
+  - 'waitFor #dialog[open] visible 1200'
+  - 'assert text #dialog Dialog Content'
+  - screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
-  <rtgl-button id="button">Open Dialog</rtgl-button>
+  <rtgl-button id="button" data-testid="open-dialog-basic">Open Dialog</rtgl-button>
   <rtgl-dialog id="dialog">
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Dialog Content</rtgl-text>
