--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
@@ -1,6 +1,10 @@
 ---
-title: "Open"
-skipScreenshot: true
+title: Dialog • Open • Default Visible
+description: Verifies dialog rendering when initialized in an open state.
+specs:
+  - Dialog starts visible with `open` attribute applied.
+  - Content layout remains stable without interaction.
+  - Close event listener clears dialog open state.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-button id="button">Open Dialog</rtgl-button>
