--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/scroll.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/scroll.html
@@ -1,6 +1,10 @@
 ---
-title: "Scroll"
-skipScreenshot: true
+title: Dialog • Scroll • Long Content Overflow
+description: Verifies scrolling behavior when dialog content exceeds available viewport height.
+specs:
+  - Dialog remains open with a large repeated content block.
+  - Overflowing content area supports scrollable presentation.
+  - Host layout remains stable while dialog is active.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-button id="button">Open Dialog</rtgl-button>
