--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-full.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-full.html
@@ -1,9 +1,16 @@
 ---
-title: Size Full
+title: Dialog • Size • Full Preset Width
+description: Verifies `s=f` dialog preset expands near full viewport width.
+specs:
+  - Full size preset grows dialog width close to viewport bounds.
+  - Runtime measurement output reports pass/fail expectation.
+  - VT flow opens dialog before screenshot capture.
 steps:
   - select open-full:
     - click
-  - wait 600
+  - 'waitFor #dialog-full[open] visible 1500'
+  - wait 350
+  - 'assert text #result-full PASS'
   - screenshot
 ---
 <rtgl-view d="v" g="md" p="lg" wh="f">
