--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-border-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-border-01.html
@@ -1,5 +1,10 @@
 ---
-title: Border
+title: Image • Border • Width and Color
+description: Verifies image border styling with and without border utility attributes.
+specs:
+  - Base image renders without explicit border utilities.
+  - Border width and color utilities apply visible frame styling.
+  - Border styling does not distort image dimensions.
 ---
 <rtgl-view g="lg" p="lg" w="100vw" h="100vh" d="h">
     <rtgl-image w="200" src="/public/sample1.jpg"></rtgl-image>
