--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-dimensions-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-dimensions-01.html
@@ -1,5 +1,10 @@
 ---
-title: Dimensions
+title: Image • Dimensions • Width Height Variants
+description: Verifies image sizing behavior across default, fixed width, fixed height, and mixed dimensions.
+specs:
+  - Default image size renders without explicit width or height.
+  - Explicit width and height attributes constrain image geometry.
+  - Width-only and height-only variants preserve expected scaling.
 ---
 <rtgl-view g="lg" p="lg" w="100vw" h="100vh" d="h">
     <rtgl-image src="/public/sample1.jpg"></rtgl-image>
