--- a/packages/rettangoli-ui/vt/specs/primitives/image/image-full-w.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/image/image-full-w.html
@@ -1,5 +1,10 @@
 ---
-title: "Image full width"
+title: Image • Width • Fill Container
+description: Verifies `w=f` image behavior inside a constrained flexible layout column.
+specs:
+  - Image expands to fill the width of its parent container.
+  - Adjacent layout column remains unaffected by full-width image sizing.
+  - Fill behavior remains stable in horizontal flex context.
 ---
 
 <rtgl-view d="h" g="lg" p="lg" wh="f" fw="wrap">
