--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-disabled-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-disabled-01.html
@@ -1,5 +1,10 @@
 ---
-title: Disabled
+title: Input • Disabled • Interactive State
+description: Verifies disabled input rendering alongside an enabled control.
+specs:
+  - Disabled input shows non-interactive appearance.
+  - Enabled input retains baseline interactive style.
+  - Visual contrast between disabled and enabled states is clear.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-text>Disabled</rtgl-text>
