--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-size-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-size-01.html
@@ -1,5 +1,10 @@
 ---
-title: Input Sizes
+title: Input • Size • Default and Small
+description: Verifies supported input size variants and their visual differences.
+specs:
+  - Default size uses baseline control height and typography.
+  - Small size uses compact height and typography scale.
+  - Layout alignment stays consistent across both variants.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-view g="sm" w="f">
