--- a/packages/rettangoli-ui/vt/specs/primitives/popover/popover-all-placements.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/popover/popover-all-placements.html
@@ -1,35 +1,57 @@
 ---
-title: "All Popover Placements"
-description: "Click buttons to see different placement options"
+title: Popover • Placement • Preset Matrix
+description: Verifies placement switching across all directional presets using one reusable popover instance.
+specs:
+  - Placement attribute updates based on clicked trigger.
+  - Popover content label tracks active placement value.
+  - Reopen flow repositions overlay at trigger click coordinates.
+steps:
+  - select btn-top:
+    - click
+  - 'waitFor #popover[open] visible 1200'
+  - 'assert text #popover-text top'
+  - keypress Escape
+  - 'waitFor #popover[open] hidden 1200'
+  - select btn-right-end:
+    - click
+  - 'waitFor #popover[open] visible 1200'
+  - 'assert text #popover-text right-end'
+  - keypress Escape
+  - 'waitFor #popover[open] hidden 1200'
+  - select btn-left-start:
+    - click
+  - 'waitFor #popover[open] visible 1200'
+  - 'assert text #popover-text left-start'
+  - screenshot
 ---
 <rtgl-view w="100vw" h="100vh" ah="c" av="c">
   <rtgl-view g="lg">
     <!-- Row 1 -->
     <rtgl-view d="h" g="md">
-      <rtgl-button id="btn-top-start" w="120">top-start</rtgl-button>
-      <rtgl-button id="btn-top" w="120">top</rtgl-button>
-      <rtgl-button id="btn-top-end" w="120">top-end</rtgl-button>
+      <rtgl-button id="btn-top-start" data-testid="btn-top-start" w="120">top-start</rtgl-button>
+      <rtgl-button id="btn-top" data-testid="btn-top" w="120">top</rtgl-button>
+      <rtgl-button id="btn-top-end" data-testid="btn-top-end" w="120">top-end</rtgl-button>
     </rtgl-view>
 
     <!-- Row 2 -->
     <rtgl-view d="h" g="md">
-      <rtgl-button id="btn-right-start" w="120">right-start</rtgl-button>
-      <rtgl-button id="btn-right" w="120">right</rtgl-button>
-      <rtgl-button id="btn-right-end" w="120">right-end</rtgl-button>
+      <rtgl-button id="btn-right-start" data-testid="btn-right-start" w="120">right-start</rtgl-button>
+      <rtgl-button id="btn-right" data-testid="btn-right" w="120">right</rtgl-button>
+      <rtgl-button id="btn-right-end" data-testid="btn-right-end" w="120">right-end</rtgl-button>
     </rtgl-view>
 
     <!-- Row 3 -->
     <rtgl-view d="h" g="md">
-      <rtgl-button id="btn-bottom-start" w="120">bottom-start</rtgl-button>
-      <rtgl-button id="btn-bottom" w="120">bottom</rtgl-button>
-      <rtgl-button id="btn-bottom-end" w="120">bottom-end</rtgl-button>
+      <rtgl-button id="btn-bottom-start" data-testid="btn-bottom-start" w="120">bottom-start</rtgl-button>
+      <rtgl-button id="btn-bottom" data-testid="btn-bottom" w="120">bottom</rtgl-button>
+      <rtgl-button id="btn-bottom-end" data-testid="btn-bottom-end" w="120">bottom-end</rtgl-button>
     </rtgl-view>
 
     <!-- Row 4 -->
     <rtgl-view d="h" g="md">
-      <rtgl-button id="btn-left-start" w="120">left-start</rtgl-button>
-      <rtgl-button id="btn-left" w="120">left</rtgl-button>
-      <rtgl-button id="btn-left-end" w="120">left-end</rtgl-button>
+      <rtgl-button id="btn-left-start" data-testid="btn-left-start" w="120">left-start</rtgl-button>
+      <rtgl-button id="btn-left" data-testid="btn-left" w="120">left</rtgl-button>
+      <rtgl-button id="btn-left-end" data-testid="btn-left-end" w="120">left-end</rtgl-button>
     </rtgl-view>
   </rtgl-view>
 
