--- a/packages/rettangoli-ui/vt/specs/primitives/popover/popover-open.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/popover/popover-open.html
@@ -1,5 +1,10 @@
 ---
-title: "Open Popover"
+title: Popover • Open • Default Visible
+description: Verifies popover rendering when initialized in the open state with seeded coordinates.
+specs:
+  - Popover content is visible on initial render with `open`.
+  - Seeded `x` and `y` attributes place the overlay consistently.
+  - Reopen action restores open state after close events.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-button id="reopen-btn">Reopen Popover</rtgl-button>
