--- a/packages/rettangoli-ui/vt/specs/primitives/slider/slider-value-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/slider/slider-value-01.html
@@ -1,5 +1,10 @@
 ---
-title: With Value
+title: Slider • Value • Initial Position
+description: Verifies initial thumb position when value is provided.
+specs:
+  - Initial value sets non-default thumb position.
+  - Value rendering remains stable without extra range attributes.
+  - Track and thumb styles remain consistent with baseline slider.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-slider value="75"></rtgl-slider>
