--- a/packages/rettangoli-ui/vt/specs/primitives/slider/slider-width-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/slider/slider-width-01.html
@@ -1,5 +1,10 @@
 ---
-title: Custom Width
+title: Slider • Width • Fixed Dimension
+description: Verifies explicit width behavior for slider controls.
+specs:
+  - Fixed width value applies predictable control width.
+  - Thumb placement still reflects configured value.
+  - Explicit width does not break track styling.
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="wrap">
   <rtgl-slider w="300" value="40"></rtgl-slider>
