--- a/packages/rettangoli-ui/vt/specs/primitives/text/text-color-02.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/text/text-color-02.html
@@ -1,5 +1,10 @@
 ---
-title: Color 2
+title: Text • Color • Muted Background
+description: Verifies text color token contrast against muted container backgrounds.
+specs:
+  - Default text remains readable on muted background.
+  - Foreground and accent foreground tokens keep contrast.
+  - Muted foreground token remains intentionally subdued.
 ---
 <rtgl-view bgc="mu" g="lg" p="lg" wh="f" fw="wrap">
     <rtgl-text>abcdefghijklmnopqrstuvwxyz</rtgl-text>
