chore: update ui themes, docs, vt, and sites workflows

--- a/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
+++ b/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
@@ -2,6 +2,7 @@
 title: UI Docs Getting Started
 url: /ui/docs/introduction/getting-started/
 steps:
-  - wait 1200
+  - action: wait
+    ms: 1200
 ---
 <main data-testid="ui-docs-getting-started"></main>
