--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/test.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/test.html
@@ -6,11 +6,19 @@ specs:
   - Click action opens dialog from closed state.
   - Screenshot captures the resulting visible dialog.
 steps:
-  - select open-dialog-test:
-    - click
-  - 'waitFor #dialog[open] visible 1200'
-  - 'assert text #dialog Medium Dialog'
-  - screenshot
+  - action: select
+    testId: open-dialog-test
+    steps:
+      - action: click
+  - action: waitFor
+    selector: '#dialog[open]'
+    state: visible
+    timeoutMs: 1200
+  - action: assert
+    type: text
+    selector: '#dialog'
+    value: Medium Dialog
+  - action: screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-button id="button" data-testid="open-dialog-test">Open Dialog s=md</rtgl-button>
