--- a/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
+++ b/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
@@ -2,7 +2,6 @@
 title: UI Docs Getting Started
 url: /ui/docs/introduction/getting-started/
 steps:
-  - action: wait
-    ms: 1200
+  - wait 1200
 ---
 <main data-testid="ui-docs-getting-started"></main>
